# fc.json

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  README.md  makefile  sample 2.json  sample.json  vcpkg.json
.github/workflows/: Build_and_Release.yaml  bump-homebrew-tap.yml  ci.yml  release.yml
.rctx/claims/release/: version-define.md  version-placeholder.md
docs/adr/: 0001-ir-and-renderer-split.md  0002-cmake-vcpkg-build.md
fc.json/: main.cpp
fc.json.xcodeproj/: project.pbxproj
fc.json.xcodeproj/project.xcworkspace/xcuserdata/fcrozetta.xcuserdatad/xcdebugger/: Expressions.xcexplist
fc.json.xcodeproj/xcshareddata/xcschemes/: fc.json.xcscheme
fc.json.xcodeproj/xcuserdata/fcrozetta.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
fc.json.xcodeproj/xcuserdata/fcrozetta.xcuserdatad/xcschemes/: -h.xcscheme  fc.json redact.xcscheme  xcschememanagement.plist
fc.json/include/tabulate/: tabulate.hpp
fc.json/ir/: schema.hpp
fc.json/parse/: parser.hpp
fc.json/render/: json_util.hpp  jsonschema.cpp  pydantic.cpp
fc.json/schema/: infer.cpp  infer.hpp
fc.json/tests/: test_document.cpp  test_infer.cpp  test_parser.cpp  test_render.cpp  test_table.cpp
fc.json/utils/: processjson.hpp  pydanticSchemaGenerator.hpp  schemaGenerator.h  schemaGenerator.hpp
src/: main.cpp
src/ir/: node.hpp  schema.hpp
src/parse/: parser.cpp
src/render/: document.cpp  document.hpp  json_util.hpp  jsonschema.cpp  jsonschema.hpp  pydantic.cpp  pydantic.hpp  table.cpp  table.hpp
src/schema/: infer.cpp
src/tests/: test_infer.cpp  test_jsonschema.cpp
